[gd_scene load_steps=9 format=3 uid="uid://bfdywaeoyjj3f"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_eptml"]
[ext_resource type="Script" uid="uid://djw8j8g6ppg7y" path="res://addons/CustomControls/Dialogs/select_required_item_dialog.gd" id="1_g8w5r"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="2_fleir"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="3_5jwqa"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="3_cpfs2"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="3_gac2d"]

[sub_resource type="Gradient" id="Gradient_vvvrv"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ykjfa"]
gradient = SubResource("Gradient_vvvrv")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="SelectRequiredItemDialog" type="Window"]
oversampling_override = 1.0
title = "Component"
position = Vector2i(0, 36)
size = Vector2i(420, 260)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_eptml")
script = ExtResource("1_g8w5r")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ykjfa")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Item Type:"

[node name="DataType" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select material type (Items, Weapons or Armors)"
mouse_default_cursor_shape = 2
selected = 0
item_count = 3
popup/item_0/text = "Items"
popup/item_0/id = 0
popup/item_1/text = "Weapons"
popup/item_1/id = 1
popup/item_2/text = "Armors"
popup/item_2/id = 2
script = ExtResource("3_cpfs2")

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Selected Item"

[node name="ItemType" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_gac2d")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Select one of the items of the selected type"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quantity:"

[node name="Quantity" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_fleir")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Selects the required quantity of the selected material"
min_value = 1.0
value = 1.0
allow_greater = true
_custom_value = 0.0

[node name="PercentContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PercentContainer"]
layout_mode = 2
text = "Drop Rate:"

[node name="Percent" parent="MarginContainer/VBoxContainer/PercentContainer" instance=ExtResource("2_fleir")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Determines the chance for this material to be obtained when dismantling an item."
step = 0.001
rounded = false
allow_greater = true
_custom_value = 0.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("3_5jwqa")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"
text_overrun_behavior = 3

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("3_5jwqa")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"
text_overrun_behavior = 3

[connection signal="item_selected" from="MarginContainer/VBoxContainer/DataType" to="." method="_on_data_type_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ItemType" to="." method="_on_item_type_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Quantity" to="." method="_on_quantity_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/PercentContainer/Percent" to="." method="_on_percent_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
